[gd_scene load_steps=16 format=3 uid="uid://dvvounug3wh7w"]

[ext_resource type="Script" uid="uid://mygljvjdjmh2" path="res://scenes/shop/shop.gd" id="1_qaxay"]
[ext_resource type="Theme" uid="uid://khyscqqmwjts" path="res://main_theme.tres" id="2_7lxhl"]
[ext_resource type="Script" uid="uid://dgtcp4u30l4g7" path="res://custom_resources/artifact.gd" id="2_dww4p"]
[ext_resource type="Texture2D" uid="uid://cd8i2gpkgp1ax" path="res://art/More_kenney/scifiStructure_08.png" id="2_jp048"]
[ext_resource type="Resource" uid="uid://bc8ohhy6xrxf8" path="res://artifacts/block_antenna.tres" id="3_g6lcs"]
[ext_resource type="Resource" uid="uid://b2fkw085sl0io" path="res://artifacts/explosive_chip.tres" id="4_131kw"]
[ext_resource type="PackedScene" uid="uid://csshdwm301pv8" path="res://scenes/shop/shop_card.tscn" id="4_ctpgp"]
[ext_resource type="PackedScene" uid="uid://rwmp6414ioiv" path="res://scenes/shop/shop_artifact.tscn" id="5_ge4d2"]
[ext_resource type="Resource" uid="uid://1m2scb1y085e" path="res://artifacts/stabilizer.tres" id="5_xoc10"]
[ext_resource type="Resource" uid="uid://cbr5oda8ied4r" path="res://artifacts/code_discount.tres" id="6_k5co3"]
[ext_resource type="PackedScene" uid="uid://cqth2eyt5mj4e" path="res://scenes/ui/card_tooltip_popup.tscn" id="6_ptf86"]
[ext_resource type="FontFile" uid="uid://ba2qu6bcy7vvs" path="res://art/art_test/fonts/display_momo/MomoTrustDisplay-Regular.ttf" id="11_131kw"]
[ext_resource type="PackedScene" uid="uid://chkibjfuxnbpk" path="res://scenes/modifier_handler/modifier_handler.tscn" id="13_131kw"]
[ext_resource type="PackedScene" uid="uid://djnsks8lx06yi" path="res://scenes/modifier_handler/modifier.tscn" id="14_xoc10"]

[sub_resource type="LabelSettings" id="LabelSettings_xoc10"]
font = ExtResource("11_131kw")
font_size = 136

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qaxay")
shop_artifacts = Array[ExtResource("2_dww4p")]([ExtResource("3_g6lcs"), ExtResource("4_131kw"), ExtResource("5_xoc10"), ExtResource("6_k5co3")])

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect2" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.390631, 0.530759, 0.765868, 1)

[node name="DecorationLayer" type="CanvasLayer" parent="."]

[node name="TextureRect2" type="TextureRect" parent="DecorationLayer"]
offset_left = 66.0
offset_top = 25.0
offset_right = 130.0
offset_bottom = 89.0
texture = ExtResource("2_jp048")
expand_mode = 1
stretch_mode = 5

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ShopContent" type="VBoxContainer" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -370.0
offset_right = 376.0
offset_bottom = 478.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cards" type="HBoxContainer" parent="UILayer/ShopContent"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 16

[node name="ShopCard" parent="UILayer/ShopContent/Cards" instance=ExtResource("4_ctpgp")]
layout_mode = 2

[node name="ShopCard2" parent="UILayer/ShopContent/Cards" instance=ExtResource("4_ctpgp")]
layout_mode = 2

[node name="ShopCard3" parent="UILayer/ShopContent/Cards" instance=ExtResource("4_ctpgp")]
layout_mode = 2

[node name="Artifacts" type="HBoxContainer" parent="UILayer/ShopContent"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 16

[node name="ShopArtifact" parent="UILayer/ShopContent/Artifacts" instance=ExtResource("5_ge4d2")]
layout_mode = 2

[node name="ShopArtifact2" parent="UILayer/ShopContent/Artifacts" instance=ExtResource("5_ge4d2")]
layout_mode = 2

[node name="ShopArtifact3" parent="UILayer/ShopContent/Artifacts" instance=ExtResource("5_ge4d2")]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer"]
offset_left = 124.0
offset_top = 149.0
offset_right = 482.0
offset_bottom = 327.0
theme = ExtResource("2_7lxhl")
theme_override_font_sizes/font_size = 14
text = "Shop"
label_settings = SubResource("LabelSettings_xoc10")

[node name="BackButton" type="Button" parent="UILayer"]
custom_minimum_size = Vector2(260, 80)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -439.0
offset_top = -178.0
offset_right = -139.0
offset_bottom = -78.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_7lxhl")
theme_override_font_sizes/font_size = 36
text = "Next Station"

[node name="CardTooltipPopup" parent="UILayer" instance=ExtResource("6_ptf86")]
unique_name_in_owner = true
visible = false

[node name="ModifierHandler" parent="." instance=ExtResource("13_131kw")]

[node name="ShopCostModifier" parent="ModifierHandler" instance=ExtResource("14_xoc10")]
type = 3

[connection signal="pressed" from="UILayer/BackButton" to="." method="_on_back_button_pressed"]
